fixed letter spacing in background text for hero -- keeps text visible on 414 screem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,7 +370,7 @@ h1 {
 
 .hero-h1 {
   font-size: 6rem;
-  letter-spacing: 0.1em;
+  letter-spacing: 0px;
   font-weight: 900;
   color: rgba(255, 255, 255, 0.3);
   position: absolute;
